New contents to 'feature' branch

--- a/div_and_span.html
+++ b/div_and_span.html
@@ -26,6 +26,7 @@
         </div>
          <div id=bottom>
             This is the <span class="name">bottom</span> of my web page.
+            <p> I added this paragraph in the 'feature' branch </p>
         </div>        
     </body>
 </html>
